@@ -6,7 +6,8 @@ import mobac.program.interfaces.MapInterface;
 public class AtlasTestException extends Exception {
 
 	public AtlasTestException(String message, MapInterface map) {
-		super(message + "\nError caused by map \"" + map.getName() + "\"");
+		super(message + "\nError caused by map \"" + map.getName() + "\" on layer \""
+				+ map.getLayer().getName() + "\"");
 	}
 
 	public AtlasTestException(String message, LayerInterface layer) {
